27_IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  name: ingressrule
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pageonesvc
            port:
              number: 80
        path: /webpageone
        pathType: Exact
      - backend:
          service:
            name: pagetwosvc
            port:
              number: 80
        path: /webpagetwo
        pathType: Exact
status:
  loadBalancer: {}
